compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/localClassApproximation.descriptors.java
public final class B /* p.B*/ {
  @org.jetbrains.annotations.NotNull()
  private final A x;

  @org.jetbrains.annotations.NotNull()
  private final A y;

  @org.jetbrains.annotations.NotNull()
  public final A getX();//  getX()

  @org.jetbrains.annotations.NotNull()
  public final A getY();//  getY()

  public  B();//  .ctor()
}
